# crewai_chat_ui

./: .gitignore
template_test/: README.md  pyproject.toml  report.md
template_test/src/: debug_project.py
template_test/src/template_test/: crew.py  main.py
