[project]
name = "template_test"
version = "0.1.0"
description = "template_test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
template_test = "template_test.main:run"
run_crew = "template_test.main:run"
train = "template_test.main:train"
replay = "template_test.main:replay"
test = "template_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
